tests/reliability/reject/triple_quote.keel
def main(sys: System); Io:
    s = """oops"""
    println(s)
